# ProofRead

./: .dockerignore  .gitignore  DEPLOY.md  Dockerfile  README.md  SPEC.md  prototype_review.py  railway.toml
.github/workflows/: ci.yml  latency-probe.yml
artwork/: generate_labels.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_rule_results_surface.py  0003_backfill_drifted_columns.py  0004_label_cache_and_drift.py  0005_label_cache_brand_first_frame.py
backend/app/: auth.py  config.py  db.py  main.py  models.py  telemetry.py
backend/app/api/: admin.py  detect.py  scans.py  verify.py
backend/app/canonical/: health_warning.txt
backend/app/rules/: aggregation.py  canonical.py  checks.py  engine.py  inference.py  loader.py  types.py
backend/app/rules/definitions/: beer.yaml  spirits.yaml  wine.yaml
backend/app/services/: adversarial.py  anthropic_client.py  container_check.py  enrichment.py  explanation.py  health_warning_second_pass.py  ocr.py  persisted_cache.py  pipeline.py  quality_gate.py  qwen_vl.py  reverse_lookup.py  sensor_briefing.py  sensor_check.py  shadow_model.py  storage.py  verify.py  verify_cache.py  verify_stats.py  vision.py  vision_chain.py
backend/app/services/extractors/: beer.py  claude_vision.py  qwen_vl.py
backend/app/static/: index.html
backend/scripts/: export_training_data.py  probe_anthropic_status.py  smoke_failover.py  smoke_qwen_fallback.py  verify_latency.py
backend/tests/: conftest.py  test_admin_cache_health.py  test_adversarial.py  test_anthropic_client.py  test_api.py  test_claude_vision.py  test_db_persistence.py  test_detect.py  test_enrichment.py  test_enrichment_stamps_first_frame.py  test_explanation.py  test_export_training_data.py  test_external_ttb_cola.py  test_extractor.py  test_extreme_conditions.py  test_health_warning_second_pass.py  test_history.py  test_known_label_persisted_cache.py  test_migration_0005.py  test_new_checks.py  test_persisted_cache.py  test_pipeline_e2e.py  test_quality_gate.py  test_qwen_vl.py  test_reverse_lookup.py  test_rule_engine.py  test_rules_spirits_age.py  test_rules_wine_organic.py  test_rules_wine_sulfite.py  test_scans_from_cache.py  test_sensor_check.py  test_shadow_model.py  test_spirits_rules.py  test_storage.py  test_stress_degradations.py  test_telemetry.py  test_verify.py  test_verify_api.py  test_verify_cache.py  test_verify_latency_probe.py  (+4 more)
backend/validation/: README.md  __init__.py  conftest.py  corpus.py  measure.py  real_corpus.py  replay_extractor.py  synthesize.py  test_precision_targets.py  test_real_corpus.py  test_recorders.py
backend/validation/real_labels/: MEASUREMENTS.md  README.md  RUNBOOK.md  SCHEMA.md  SOURCES.md  measurements_baseline.json
backend/validation/real_labels/lbl-0001/: recorded_detect_container.json  recorded_extraction.json  truth.json
backend/validation/real_labels/lbl-0002/: recorded_detect_container.json  recorded_extraction.json  truth.json
backend/validation/real_labels/lbl-0003/: recorded_detect_container.json  recorded_extraction.json  truth.json
backend/validation/real_labels/lbl-0004/: recorded_extraction.json  truth.json
backend/validation/real_labels/lbl-0005/: recorded_detect_container.json  recorded_extraction.json  truth.json
backend/validation/real_labels/lbl-0006/: recorded_detect_container.json  recorded_extraction.json  truth.json
backend/validation/scripts/: annotate.py  measure_corpus.py  migrate_truth_v2.py  record_detect_container.py  record_extraction.py  synth_from_truth.py  validate_truth.py  wikimedia_fetcher.py
backend/validation/stress_test/: REPORT.md  __init__.py  __main__.py  degradations.py  report.py  runner.py
backend/validation/tests_fixtures/lbl-9001/: recorded_extraction.json  truth.json
backend/validation/tests_fixtures/lbl-9002/: recorded_extraction.json  truth.json
mobile/: .gitignore  README.md  app.json  babel.config.js  eas.json  package-lock.json  package.json  tsconfig.json
mobile/app/: _layout.tsx  index.tsx  signin.tsx
mobile/app/(app)/: _layout.tsx  history.tsx  home.tsx  settings.tsx
mobile/app/(app)/scan/: KnownLabelSheet.tsx  beverage-type.tsx  container-size.tsx  (+3 more)
mobile/src/: theme.ts
mobile/src/api/: client.ts  errors.ts  types.ts
mobile/src/components/: BBoxOverlay.tsx  Button.tsx  CaptureQualityPill.tsx  ConfidenceBar.tsx  EmptyState.tsx  ErrorState.tsx  ExternalMatchCard.tsx  HealthWarningCard.tsx  Icon.tsx  ProgressBar.tsx  RecentScanRow.tsx  RuleResultCard.tsx  Screen.tsx  SectionHeader.tsx  Skeleton.tsx  StatusBadge.tsx  Toast.tsx  ToastContext.tsx  ToastProvider.tsx  index.ts
mobile/src/hooks/: useToast.ts
mobile/src/state/: auth.ts  queryClient.ts  scanStore.ts
(+42 files in other folders)
