[project]
name = "proofread-backend"
version = "0.1.0"
description = "ProofRead backend — TTB label compliance verification"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0.27",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pyyaml>=6.0",
    "rapidfuzz>=3.6",
    "python-multipart>=0.0.9",
    "boto3>=1.34",
    "Pillow>=10.2",
    "anthropic>=0.40",
    "httpx>=0.27",
    "jinja2>=3.1",
    "numpy>=1.26",
    "scipy>=1.11",
    # External-sources tier (TTB COLA Registry adapter): the public
    # search returns HTML, not JSON, and BeautifulSoup is the
    # path-of-least-resistance parser that ships everywhere we deploy.
    # Selectolax is faster but adds a Cython compile step, which is
    # not worth it given the per-call HTML is sub-100 KB.
    "beautifulsoup4>=4.12",
]

[project.optional-dependencies]
google-vision = ["google-cloud-vision>=3.7"]
# Telemetry deps are runtime-optional so the test suite + local dev can
# run without them. Init code is no-op when the corresponding env vars
# are unset; the imports themselves are lazy so missing packages don't
# explode at startup either.
telemetry = [
    "sentry-sdk[fastapi]>=2.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp-proto-http>=1.25",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.3",
    "mypy>=1.9",
    "types-PyYAML>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"

# boto3 has no first-party stubs; google-cloud-vision ships without a
# py.typed marker. Both are external SDKs we don't control — silence the
# "missing stubs" noise so real type errors aren't drowned out.
[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "google.cloud", "google.cloud.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "ASYNC"]
# UP042: keeping `str, Enum` mixin (not StrEnum) — call sites use explicit
#   `.value` access and changing `__str__` semantics could affect serialization.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# B008: FastAPI's `Depends(...)`, `File(...)`, `Form(...)` are idiomatic
#   in route handler defaults; the framework expects them at call-construction
#   time. Suppressed only in API routers.
"app/api/*.py" = ["B008"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
